# agentok

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  api-docs.html  app.py  concepts.html  crowdin.yml  docker-compose.yaml  getting-started.html  index.html  init_templates.sql  markdown-page.html  package.json  pnpm-lock.yaml  privacy.html  sitemap.xml  tos.html
api/: .dockerignore  .env.sample  .gitignore  Dockerfile  Dockerfile.base  OAI_CONFIG_LIST.sample  README.md  entrypoint.sh  pyproject.toml  requirements.txt  start.sh
api/agentok_api/: dependencies.py  main.py  models.py  requirements.txt
api/agentok_api/extensions/: __init__.py  extended_agent.py
api/agentok_api/routers/: admin.py  chats.py  codegen.py  datasets.py  extension.py  tools.py
api/agentok_api/services/: __init__.py  admin.py  chat_manager.py  chats.py  codegen.py  datasets.py  extensions.py  logger.py  output_parser.py  rag_query.py  supabase.py  tools.py
api/agentok_api/templates/: assistant.j2  config.j2  conversable_agent.j2  gpt_assistant.j2  group_chat.j2  import_mapping.j2  main.j2  nested_chat.j2  rag.j2  start_chat.j2  tool.j2  tool_binding.j2  tool_env.j2  user.j2
api/agentok_api/utils/: id.py  img_utils.py
api/app/: dependencies.py  main.py  models.py  schemas.py
api/app/core/: codegen.py  parser.py  runner.py
api/app/extensions/: dalle_agent.py
api/app/routers/: admin_router.py  agent.py  chat.py  chat_router.py  codegen_router.py  dataset_router.py  dev.py  dev_router.py  doc_router.py  extension_router.py  message_router.py  websocket.py
api/app/services/: admin_service.py  chat_manager.py  chat_service.py  codegen_service.py  dataset_service.py  dev_service.py  extension_service.py  (+4 more)
api/examples/: flow2py.py  sequential-chat.py  shareprice.py
api/samples/: vis.py
api/user_code/: fetch_news.py  fetch_vancouver_news.py  gdelt_event_search.py  get_news.py  get_vancouver_news.py  paris_news.py  scrape_vancouver_news.py  tmp_code_9b204e2c0a468fc4649731b589e96b89.py  top_headlines.py  weather.py
(+1081 files in other folders)
