[tool.poetry]
name = "agentok-api"
version = "0.1.0"
description = "Agentok APIs"
authors = ["Hugh Lyu <hugh.lv@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
diskcache = "5.6.3"
fastapi = "0.112.0"
gotrue = "2.6.1"
h11 = "0.14.0"
Jinja2 = "3.1.4"
numpy = "1.26.0"
openai = "1.38.0"
Pillow = "10.4.0"
pyautogen = "0.2.33"
pydantic = "2.8.2"
pymupdf = "1.24.9"
python-dotenv = "1.0.1"
python_docx = "1.1.2"
regex = "2023.12.25"
requests = "2.32.3"
sentence_transformers = "3.0.1"
starlette = "0.37.2"
termcolor = "2.4.0"
unstructured = "*"
uvicorn = "^0.30.5"
supabase = "^2.6.0"
python-multipart = "^0.0.9"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
alembic = "^1.7.4"

[tool.poetry.group.dev.dependencies]
pipreqs = "^0.5.0"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
