[tool.poetry]
name = "agentok-api"
version = "0.1.0"
description = "Agentok APIs"
authors = ["Dustland <agentok@dustland.ai>"]
readme = "README.md"
package-mode = false

[tool.virtualenvs]
in-project = true
create = true
prefer-active-python = true

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
diskcache = "5.6.3"
fastapi = "0.115.5"
gotrue = "2.11.0"
Jinja2 = "3.1.4"
Pillow = "11.0.0"
pydantic = "2.9.2"
python-dotenv = "1.0.1"
regex = "2024.11.6"
requests = "2.32.3"
starlette = "0.41.3"
termcolor = "2.5.0"
uvicorn = "^0.32.0"
supabase = "^2.11.0"
tavily-python = "^0.5.0"
cohere = "^5.8.0"
python-magic = "^0.4.27"
openai = "^1.54.5"
autogen = "0.5.3"

[tool.poetry.group.dev.dependencies]
black = "^24.3"
isort = "^5.9.3"
alembic = "^1.7.4"
pipreqs = "^0.5.0"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
